syntax = "proto3";

option csharp_namespace = "Protos.Pets.DeletePet";

package deletepet;

message DeletePetResponse {

}
