syntax = "proto3";

option csharp_namespace = "Protos.Pets.UpdatePet";

import "google/type/datetime.proto";

package updatepet;

message UpdatePetRequest {
  string UserId = 1;
  string Contact = 2;
  string Name = 3;
  string Kennel = 4;
  string Pedigree = 5;
  string Chip = 6;
  optional google.type.DateTime Birthday = 7;
  optional google.type.DateTime Decease = 8;
  string UriToPhoto = 9;
  PetType Type = 10;

  repeated Vaccination Vaccinations = 11;
}

enum PetType {
  PetType_Unspecified = 0;
  Dog = 1;
  Horse = 2;
  Cat = 3;
  Rabbit = 4;
}

message Vaccination {
  optional google.type.DateTime Date = 1;
  optional google.type.DateTime ValidUntil = 2;
  VaccinationType Type = 3;
  string Note = 4;
  string UriToPhoto = 5;
}

enum VaccinationType {
  VaccinationType_Unspecified = 0;
  Rabies = 1; // vzteklina
  Psinka = 2;
  Parvoviroza = 3;
  HepatitidaContagiosaCanis = 4;
  Leptospiroza = 5;
  Parainfluenza = 6;
  LymskaBorelioza = 7;
  Babesioza = 8;
  PlisnoveInfekce = 9;
  Leishmanioza = 10;
}
